--- a/website/docs/dns_providers/rfc2136.html.markdown
+++ b/website/docs/dns_providers/rfc2136.html.markdown
@@ -52,4 +52,16 @@ directly through the `config` block in the
   `hmac-md5.sig-alg.reg.int.`
 * `RFC2136_TSIG_KEY` - The TSIG secret key name.
 * `RFC2136_TSIG_SECRET` - The TSIG secret key payload.
-* `RFC2136_TIMEOUT` - The DNS propagation timeout.
+
+The following additional optional variables are available:
+
+* `RFC2136_POLLING_INTERVAL` - The amount of time, in seconds, to wait between
+  DNS propagation checks (default: `2`).
+* `RFC2136_PROPAGATION_TIMEOUT` - The amount of time, in seconds, to wait for DNS
+  propagation (default: `60`). Can also be specified by `RFC2136_TIMEOUT`.
+* `RFC2136_TTL` - The TTL to set on DNS challenge records, in seconds (default:
+  `120`).
+* `RFC2136_DNS_TIMEOUT` - The timeout on DNS UPDATE requests (default:
+  `10`).
+* `RFC2136_SEQUENCE_INTERVAL` - The time to wait between DNS challenges (default:
+  `60`).
