modules: update to lego v4.1.0
Particular changes we need are go-acme/lego#1283 (Post-as-GET, so that
we can test with pebble), and go-acme/lego#1279 (requested fix for the
Designate provider).

Fixes #128.

--- a/website/docs/dns_providers/rfc2136.html.markdown
+++ b/website/docs/dns_providers/rfc2136.html.markdown
@@ -53,7 +53,7 @@ supplied by supplying the argument with the `_FILE` suffix. See
 [acme-certificate-file-arg-example]: /docs/providers/acme/r/certificate.html#using-variable-files-for-provider-arguments
 
 * `RFC2136_NAMESERVER` - Network address in the form "host" or "host:port".
-* `RFC2136_TSIG_ALGORITHM` - TSIG algorythm. See [miekg/dns#tsig.go](https://github.com/miekg/dns/blob/master/tsig.go) for supported values. To disable TSIG authentication, leave the `RFC2136_TSIG*` variables unset..
+* `RFC2136_TSIG_ALGORITHM` - TSIG algorithm. See [miekg/dns#tsig.go](https://github.com/miekg/dns/blob/master/tsig.go) for supported values. To disable TSIG authentication, leave the `RFC2136_TSIG*` variables unset..
 * `RFC2136_TSIG_KEY` - Name of the secret key as defined in DNS server configuration. To disable TSIG authentication, leave the `RFC2136_TSIG*` variables unset..
 * `RFC2136_TSIG_SECRET` - Secret key payload. To disable TSIG authentication, leave the` RFC2136_TSIG*` variables unset..
 
